js/js.translator/testData/incremental/invalidation/associatedObjectKey/lib2/zFile.3.kt
@file:OptIn(ExperimentalAssociatedObjects::class)

import kotlin.reflect.*

@AssociatedObjectKey
annotation class ZClass(val kClass: KClass<out Any>)
